# finance-data-platform

./: .gitignore  Dockerfile  app.py  build-layer.sh  pyproject.toml  requirements-dev.txt  requirements.txt  template.yaml  watch-logs.sh
events/: market_data_event.json
glue_scripts/: process_finance_data.py  test_local.py
lambda/: requirements.txt
lambda/company_financials/: edgar_finance.py
lambda/market_data/: yahoo_finance.py
scripts/: check-glue-catalog.sh  deploy-glue-scripts.sh  query-data.sh  run-glue-crawler.sh  run-glue-job.sh  setup-athena.sh
stacks/: data_platform_stack.py  lambda_layer.py
